src/objects/BT_CO_CMIS_POP_ImportPublicationPrice__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coverPrice__c</fullName>
        <label>coverPrice</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dayOfWeek__c</fullName>
        <label>dayOfWeek</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectiveDate__c</fullName>
        <label>effectiveDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationCode__c</fullName>
        <label>publicationCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesType__c</fullName>
        <label>salesType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMIS_POP_ImportPublicationPrice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BT_CO_CMIS_POP_ImportPublicationInfo Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMIS_POP_ImportPublicationPrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>